feat: justify text of list item

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -162,5 +162,6 @@ ul.arrow-list, article.post-content ul, article.post-content ol {
     line-height: 23px;
     padding-left: 30px;
     margin-bottom: .5rem;
+    text-align: justify;
   }
 }
