feat: add Marque Bretagne specifications

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -165,3 +165,10 @@ ul.arrow-list, article.post-content ul, article.post-content ol {
     text-align: justify;
   }
 }
+
+.brittany {
+  display: inline-block;
+  margin-top: -0.2rem;
+  height: 0.8rem;
+  width: auto;
+}
