feat: use marque bretagne logotype in navigation header

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -44,4 +44,9 @@
           </ul>
         </div>
       </div>
+      <img
+        src="/assets/images/website/marque-bretagne-black.png"
+        width="140"
+        alt="Marque Bretagne"
+      />
     </nav>
